Fix navbar on small screens

--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -777,6 +777,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\/src\/assets\/logo\/home_background\.jpg\'\)\] {
   background-image: url('/src/assets/logo/home_background.jpg');
 }
